Update NUSModsUtil to use URI instead of URL for module list and module retrieval