@@ -1,29 +1,29 @@
 package modmate.download.nusmods;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class NUSModsUtil {
 
-    private static final String MODULE_LIST_URL = "https://api.nusmods.com/v2/%d-%d/moduleList.json";
-    private static final String MODULE_URL = "https://api.nusmods.com/v2/%d-%d/modules/%s.json";
+    private static final String MODULE_LIST_URI = "https://api.nusmods.com/v2/%d-%d/moduleList.json";
+    private static final String MODULE_URI = "https://api.nusmods.com/v2/%d-%d/modules/%s.json";
 
-    public static URL getUrlForModuleList(int startYear) throws MalformedURLException {
+    public static URI getUriForModuleList(int startYear) throws URISyntaxException {
         assert startYear > 2020;
 
         int endYear = startYear + 1;
-        String urlString = String.format(MODULE_LIST_URL, startYear, endYear);
+        String uriString = String.format(MODULE_LIST_URI, startYear, endYear);
 
-        return new URL(urlString);
+        return new URI(uriString);
     }
 
-    public static URL getUrlForModule(String moduleCode, int startYear) throws MalformedURLException {
+    public static URI getUriForModule(String moduleCode, int startYear) throws URISyntaxException {
         assert startYear > 2020;
 
         int endYear = startYear + 1;
-        String urlString = String.format(MODULE_URL, startYear, endYear, moduleCode.toString());
+        String uriString = String.format(MODULE_URI, startYear, endYear, moduleCode.toString());
 
-        return new URL(urlString);
+        return new URI(uriString);
     }
 
 }
